--- a/source/_posts/我的第一个博客.md
+++ b/source/_posts/我的第一个博客.md
@@ -5,7 +5,7 @@ tags: 随笔
 categories: 随笔
 ---
 
-“吾生也有涯，而知也无涯。”
+> **“吾生也有涯，而知也无涯。”**
 
 2018年12月12日搭建了此博客，记录一下这一天。此博客用Hexo + Netlify 搭建的静态网站。
 
@@ -14,7 +14,7 @@ categories: 随笔
 <!-- more -->
 ## 记录第一篇博客
 
-“吾生也有涯，而知也无涯。”
+> **“吾生也有涯，而知也无涯。”**
 
 2018年12月12日搭建了此博客，记录一下这一天。此博客用Hexo + Netlify 搭建的静态网站。
 
@@ -22,7 +22,7 @@ categories: 随笔
 
 原本只是简单的写了点作为记录，但是今天（2018年12月13日）还是想需要正式一下这篇文章，昨天的博客主题还是Hexo默认主题，今天看到了[hexo-theme-bmw](https://godbmw.com/)主题很清爽（98年诞生的小姐姐，想想自己™白活了）然后就借鉴来了，于是乎对原有内容重新构建一下，为了不给以后的自己有可乘之机。
 
-“每一个技术的学习，都是从模仿开始。” 这句话是朋友博客上拷贝来的，记录一下。
+[“每一个技术的学习，都是从模仿开始。”](https://www.loveinliuy.com/) 出自朋友的博客网站，也希望在此能结识更多的朋友。
 
 ## 目前状况
 
