--- a/source/_posts/我的第一个博客.md
+++ b/source/_posts/我的第一个博客.md
@@ -1,5 +1,6 @@
 ---
 title: 我的第一个博客
+url: my-fist-blog
 date: 2018-12-12 15:24:06
 tags: 随笔
 categories: 随笔
@@ -9,7 +10,7 @@ categories: 随笔
 
 2018年12月12日搭建了此博客，记录一下这一天。此博客用Hexo + Netlify 搭建的静态网站。
 
-之前一直用阿里的Leanote来记录笔记，也用Leanote搭建过个人博客，但是总感觉和太过庞杂，想要简洁一些可操作性强一点的个人博客，偶然看到netlify托管网站，然后看到了Hexo + Netlify 搭建的静态网站突然感觉这就是我想要的方式，于是乎搭建了此博客，具体搭建可查看我的[Hexo+GitHub+Netlify搭建属于自己的博客网站](/20181216/cjpr1pe1r00025wui7jck58t9/)。
+之前一直用阿里的Leanote来记录笔记，也用Leanote搭建过个人博客，但是总感觉和太过庞杂，想要简洁一些可操作性强一点的个人博客，偶然看到netlify托管网站，然后看到了Hexo + Netlify 搭建的静态网站突然感觉这就是我想要的方式，于是乎搭建了此博客，具体搭建可查看我的[Hexo+GitHub+Netlify搭建属于自己的博客网站](/20181216/build-own-blog/)。
 
 <!-- more -->
 ## 记录第一篇博客
@@ -18,7 +19,7 @@ categories: 随笔
 
 2018年12月12日搭建了此博客，记录一下这一天。此博客用Hexo + Netlify 搭建的静态网站。
 
-之前一直用阿里的Leanote来记录笔记，也用Leanote搭建过个人博客，但是总感觉和太过庞杂，想要简洁一些可操作性强一点的个人博客，偶然看到netlify托管网站，然后看到了Hexo + Netlify 搭建的静态网站突然感觉这就是我想要的方式，于是乎搭建了此博客，具体搭建可查看我的[Hexo+GitHub+Netlify搭建属于自己的博客网站](/20181216/cjpr1pe1r00025wui7jck58t9/)。
+之前一直用阿里的Leanote来记录笔记，也用Leanote搭建过个人博客，但是总感觉和太过庞杂，想要简洁一些可操作性强一点的个人博客，偶然看到netlify托管网站，然后看到了Hexo + Netlify 搭建的静态网站突然感觉这就是我想要的方式，于是乎搭建了此博客，具体搭建可查看我的[Hexo+GitHub+Netlify搭建属于自己的博客网站](/20181216/build-own-blog/)。
 
 原本只是简单的写了点作为记录，但是今天（2018年12月13日）还是想需要正式一下这篇文章，昨天的博客主题还是Hexo默认主题，今天看到了[hexo-theme-bmw](https://godbmw.com/)主题很清爽（98年诞生的小姐姐，想想自己™白活了）然后就借鉴来了，于是乎对原有内容重新构建一下，为了不给以后的自己有可乘之机。
 
