--- a/source/_posts/我的第一个博客.md
+++ b/source/_posts/我的第一个博客.md
@@ -8,9 +8,9 @@ categories: 随笔
 
 ## 记录第一篇博客
 
-> **“吾生也有涯，而知也无涯。”**
-
 2018年12月12日搭建了此博客，记录一下这一天。此博客用Hexo + Netlify 搭建的静态网站。
+
+<!-- more -->
 
 之前一直用阿里的Leanote来记录笔记，也用Leanote搭建过个人博客，但是总感觉和太过庞杂，想要简洁一些可操作性强一点的个人博客，偶然看到netlify托管网站，然后看到了Hexo + Netlify 搭建的静态网站突然感觉这就是我想要的方式，于是乎搭建了此博客，具体搭建可查看我的[Hexo+GitHub+Netlify搭建属于自己的博客网站](/20181216/build-own-blog/)。
 
